Capstone-4/k8s/sandbox-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  sandbox-deployment
  labels:
    app:  sandbox-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: sandbox-deployment  
  template:
    metadata:
      labels:
        app: sandbox-deployment
    spec:
      containers:
      - image:  sandbox1
        imagePullPolicy: Always
        name:  sandbox-deployment
        resources:
          requests:
            cpu: "200m"
            memory: "256M"
          limits:
            cpu: "500m"
            memory: "512M"
        livenessProbe:
          httpGet:
            path: /api/sandbox/health
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/sandbox/health
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10   
        ports:
        - containerPort:  3000
          name:  sd-dp-port
