Capstone-4/k8s/router-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  router-service
spec:
  selector:
    app: router-deployment
  type:  ClusterIP
  ports:
  - name:  rt-svc-port
    port:  80
    targetPort:  3000
