Capstone-4/k8s/sandbox-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  sandbox-service
spec:
  selector:
    app: sandbox-deployment
  type:  ClusterIP
  ports:
  - name:  sd-svc-port
    port:  80
    targetPort:  3000
